# MyTT

./: README.md  pyproject.toml
docs/: tdx-function-coverage.md
src/MyTT/: __init__.py  core.py  extras.py  tdx.py
tests/: conftest.py  test_conditions.py  test_core.py  test_extras.py  test_indicators.py  test_tdx.py
